Fixed VideoListItem keys overlapping in the playlist Fixed .video-list-item and .button-wrapper positioning

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -65,6 +65,7 @@ body {
 }
 
 .video-list-item {
+	position: relative;
 	padding: 5px;
 	text-shadow: 0px 0px 5px #000, 0px 0px 10px #000;
 	background-color: #000;
@@ -76,9 +77,9 @@ body {
 }
 
 .video-list-item .button-wrapper {
-	float: right;
-	position: relative;
-	top: -10px;
+	position: absolute;
+	top: 15px;
+	right: 0px;
 }
 
 .video-list-item .button-wrapper > span {
